fix metadata generation for req/resp samples, list endpoints with groups and toogle function

--- a/KWFOpenApi/KWFOpenApi.Html/Document/KwfApiDocumentation.razor
+++ b/KWFOpenApi/KWFOpenApi.Html/Document/KwfApiDocumentation.razor
@@ -1,100 +1,114 @@
 ﻿@using KWFOpenApi.Metadata.Models
+@using System.Text.Json
+@if (Metadata == null)
+{
 <html lang="en">
     <head>
-        @if (Metadata == null)
-        {
-            <title>KwfApiDocumentation</title>
-        }
-        else
-        {
-            <title>API: @Metadata.ApiName</title>
-        }
-        <style type="text/css">
-
-            * {
-                box-sizing: border-box;
-            }
-
-            html, body {
-                margin: 0;
-                outline: 0;
-                border: 0;
-                padding: 0;
-                display: block;
-                background-size: 100% 100%;
-                height: 100vh;
-            }
-
-            .page-container {
-                margin: 0;
-                outline: 0;
-                border: 0;
-                padding: 0;
-                display: block;
-                border-color: #100000;
-                background-color: #100000;
-                background-size: 100% 100%;
-                height: 100vh;
-            }
-
-            .page-container h1 {
-                font-weight: 500;
-                font-size: 1.25em;
-            }
-
-            .page-container h2 {
-                font-weight: 400;
-                font-size: 1.15em;
-            }
-
-            .page-container h3 {
-                font-weight: 300;
-                font-size: 1.075em;
-            }
-
-            .page-container .head-container {
-                border-color: #350000;
-                background-color: #350000;
-                color: white;
-            }
-        </style>
-        <script type="text/javascript">
-            
-        </script>
+        <title>KwfApiDocumentation</title>
     </head>
     <body>
-        @if (Metadata == null)
-        {
-            <div>
-                <h1>Metadata not found</h1>
-            </div>
-        }
-        else
-        {
-            <div class="page-container">
-                <div class="head-container">
-                    <div>
-                        <h1>API: @Metadata.ApiName</h1>
-                    </div>
-                    <div>
-                        <h1>Description: @Metadata.ApiDescription</h1>
-                    </div>
-                    <div>
-                        <h1>Version: @Metadata.ApiVersion</h1>
-                    </div>
-                </div>
-                <div class="path-container">
-
-                </div>
-                <div class="model-container">
-
-                </div>
-            </div>
-        }
+        <h1>Documentation not found</h1>
     </body>
 </html>
+}
+else
+{
+<html lang="en">
+    <head>
+        <title>API: @Metadata.ApiName</title>
+        <link rel="stylesheet" href="kwfopenapi.css">
+        <script type="text/javascript">
+            const apiModels = JSON.parse("@JsonSerializer.Serialize(Metadata.Models, SerializerOptions)");
+            const apiEnums = JSON.parse("@JsonSerializer.Serialize(Metadata.Enums, SerializerOptions)");
+        </script>
+        <script type="text/javascript" src="kwfopenapi.js"></script>
+    </head>
+    <body>
+        <div class="page-container">
+            <div class="head-container">
+                <div>
+                    <h1>API: @Metadata.ApiName</h1>
+                </div>
+                <div>
+                    <h1>Description: @Metadata.ApiDescription</h1>
+                </div>
+                <div>
+                    <h1>Version: @Metadata.ApiVersion</h1>
+                </div>
+            </div>
+            <div class="path-container">
+                <div class="api-paths">
+                    @{
+                        if (Metadata.Entrypoints != null)
+                        {
+                            foreach (var endpointGroup in Metadata.Entrypoints)
+                            {
+                                <div class="api-path-endpoint-container">
+                                    <div class="api-path-endpoint-group" toogled="false" onclick="ExpandEndpointGroup(this, 'api-path-endpoint-group-@endpointGroup.Key')">@endpointGroup.Key</div>
+                                    <div class="api-path-endpoint-group-endpoints" id="api-path-endpoint-group-@endpointGroup.Key" style="display:none; visibility:hidden">
+                                    @{
+                                        foreach (var endpoint in endpointGroup.Value)
+                                        {
+                                            <div class="api-path-endpoint-group-endpoints-container">
+                                                <div class="api-path-method" title="@endpoint.Route">
+                                                    @endpoint.Method
+                                                </div>
+                                                <div class="api-path-endpoint">
+                                                    @endpoint.Route
+                                                </div>
+                                            </div>
+                                        }
+                                    }
+                                    </div>
+                                </div>
+                            }
+                        }
+                    }
+                </div>
+                <div class="endpoint-sample">
+                    @{
+                        if (Metadata.Entrypoints != null)
+                        {
+                            foreach (var endpointGroup in Metadata.Entrypoints)
+                            {
+                                foreach (var endpoint in endpointGroup.Value)
+                                {
+                                    var endpointId = @GetEndpointId(endpoint.Operation, endpoint.Method, endpoint.Route);
+                                    <div id="@endpointId" class="endpoint-sample-item" style="display:none; visibility:hidden">
+                                        @if (!endpoint.Method.Equals("GET", StringComparison.InvariantCultureIgnoreCase) && @endpoint.RequestBodies != null)
+                                        {
+                                            <textarea name="json_req_@endpointId">@endpoint.RequestBodies[KwfRequestBodyType.Json].Body</textarea>
+                                            <input type="hidden" name="json_sample_@endpointId" value="@endpoint.RequestBodies[KwfRequestBodyType.Json].Body" />
+                                        }
+                                    </div>
+                                }
+                            }
+                        }
+                    }
+                </div>
+            </div>
+            <div class="model-container">
+
+            </div>
+        </div>
+    </body>
+</html>
+}
 
 @code {
     [Parameter]
     public KwfOpenApiMetadata? Metadata { get; set; }
+
+    [Parameter]
+    public JsonSerializerOptions? SerializerOptions { get; set; }
+
+    private static string GetEndpointId(string operationId, string method, string route)
+    {
+        if (!string.IsNullOrEmpty(operationId))
+        {
+            return operationId;
+        }
+
+        return $"endpoint_{method}_{route.Replace('/', '-').Replace('{', '_').Replace('}', '_')}";
+    }
 }
