--- a/KWFOpenApi/KWFOpenApi.Html/Document/KwfApiDocumentation.razor
+++ b/KWFOpenApi/KWFOpenApi.Html/Document/KwfApiDocumentation.razor
@@ -44,21 +44,53 @@ else
                             foreach (var endpointGroup in Metadata.Entrypoints)
                             {
                                 <div class="api-path-endpoint-container">
-                                    <div class="api-path-endpoint-group" toogled="false" onclick="ExpandEndpointGroup(this, 'api-path-endpoint-group-@endpointGroup.Key')">@endpointGroup.Key</div>
+                                    <div class="api-path-endpoint-group" kwf-toggled="false" onclick="ExpandEndpointGroup(this, 'api-path-endpoint-group-@endpointGroup.Key')">@endpointGroup.Key</div>
                                     <div class="api-path-endpoint-group-endpoints" id="api-path-endpoint-group-@endpointGroup.Key" style="display:none; visibility:hidden">
-                                    @{
-                                        foreach (var endpoint in endpointGroup.Value)
-                                        {
-                                            <div class="api-path-endpoint-group-endpoints-container">
-                                                <div class="api-path-method" title="@endpoint.Route">
-                                                    @endpoint.Method
-                                                </div>
-                                                <div class="api-path-endpoint">
+                                        @{
+                                            foreach (var endpoint in endpointGroup.Value)
+                                            {
+                                                var endpointId = @GetEndpointId(endpoint.Operation, endpoint.Method, endpoint.Route);
+                                                <div class="api-path-endpoint-group-endpoints-container">
+                                                    <div class="api-path-method" title="@endpoint.Route">
+                                                        @endpoint.Method
+                                                    </div>
+                                                    <div class="api-path-endpoint" onclick="SelectEndpoint('@endpointId')">
                                                     @endpoint.Route
+                                                    </div>
+                                                    <input type="hidden" name="endpoint_route_@endpointId" value="@endpoint.Route" />
+                                                    <input type="hidden" name="endpoint_method_@endpointId" value="@endpoint.Method" />
+                                                    @if (endpoint.HeaderParams != null)
+                                                    {
+                                                        foreach (var headerParam in endpoint.HeaderParams)
+                                                        {
+
+                                                        }
+                                                    }
+                                                    @if (endpoint.RouteParams != null)
+                                                    {
+                                                        foreach (var routeParam in endpoint.RouteParams)
+                                                        {
+
+                                                        }
+                                                    }
+                                                    @if (endpoint.QueryParams != null)
+                                                    {
+                                                        foreach (var queryParam in endpoint.QueryParams)
+                                                        {
+
+                                                        }
+                                                    }
+                                                    @if (@endpoint.RequestBodies != null && endpoint.RequestBodies.Count > 0)
+                                                    {
+                                                        foreach (var reqSample in endpoint.RequestBodies)
+                                                        {
+                                                            <input type="hidden" name="request_object_@endpointId" value="@reqSample.Value.BodyObjectName" />
+                                                            <input type="hidden" kwf-media-type="@reqSample.Key" kwf-media-type-name="@reqSample.Value.MediaTypeString" name="@($"request_sample_{endpointId}[]")" value="@reqSample.Value.Body" />
+                                                        }
+                                                    }
                                                 </div>
-                                            </div>
+                                            }
                                         }
-                                    }
                                     </div>
                                 </div>
                             }
@@ -66,25 +98,18 @@ else
                     }
                 </div>
                 <div class="endpoint-sample">
-                    @{
-                        if (Metadata.Entrypoints != null)
-                        {
-                            foreach (var endpointGroup in Metadata.Entrypoints)
-                            {
-                                foreach (var endpoint in endpointGroup.Value)
-                                {
-                                    var endpointId = @GetEndpointId(endpoint.Operation, endpoint.Method, endpoint.Route);
-                                    <div id="@endpointId" class="endpoint-sample-item" style="display:none; visibility:hidden">
-                                        @if (!endpoint.Method.Equals("GET", StringComparison.InvariantCultureIgnoreCase) && @endpoint.RequestBodies != null)
-                                        {
-                                            <textarea name="json_req_@endpointId">@endpoint.RequestBodies[KwfRequestBodyType.Json].Body</textarea>
-                                            <input type="hidden" name="json_sample_@endpointId" value="@endpoint.RequestBodies[KwfRequestBodyType.Json].Body" />
-                                        }
-                                    </div>
-                                }
-                            }
-                        }
-                    }
+                    Request Body:
+                    <div class="request_selected_media_container">
+                        <div class="request_selected_media">
+                            <label for="request_selected_media">Media type:</label>
+                            <select id="request_selected_media" name="request_selected_media"></select>
+                        </div>
+                        <div class="request_selected_media_reload_sample"><button name="reload_request_sample" onclick="ReloadRequestSample()">Reload Sample</button></div>
+                    </div>
+                    <textarea class="request_box textbox-readonly" id="request_box" name="request_box" readonly></textarea>
+                </div>
+                <div class="endpoint-response">
+
                 </div>
             </div>
             <div class="model-container">
